agregando carpeta image, css y responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<form>
 		 	<textarea type="text" id="box-text" placeholder="Escriba aquí"></textarea><br><br>
-			<button type="submit" id="go">Go</button>
+			<button type="submit" id="go">Vamos</button>
 		</form>
 		<div id="contenedor"></div>
 	<script  type='text/javascript' src='js/main.js'></script>
