agregando cambio de color en contador y muestra en negativo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<body>
 		<form>
 		 	<textarea type="text" id="box-text" placeholder="Escriba aquí"></textarea><br><br>
-			<button type="submit" id="go">Vamos</button>
+		 	<span id="contador">140</span>
+			<button type="submit" id="go" disabled="">Vamos</button>
 		</form>
 		<div id="contenedor"></div>
 	<script  type='text/javascript' src='js/main.js'></script>
