--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<form>
-		 	<textarea type="text" id="box-text" placeholder="Escriba aquí"></textarea><br><br>
+		 	<textarea type="text" id="box-text" placeholder="Escriba aquí" cols="30" rows="3"></textarea><br><br>
 		 	<span id="contador">140</span>
 			<button type="submit" id="go" disabled="">Vamos</button>
 		</form>
